# betteredit

./: .gitattributes  .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
docs/: architecture_understanding.md  cli_usage.md  color_detection_full_model.md  color_detection_model_weights.md  component_renaming.md  current_state.md  edge_detection_full_model.md  feature_renaming.md  inter_fusion_architecture_flow.md  inter_fusion_full_model.md  ml_project_template.md  neural_inter_fusion_techniques.md  next_up.md  protocols.md  setup.md  status_011826.md  success_metrics.md  test_status.md
scripts/: setup.sh
scripts/utils/: tree_view.py
src/: pipeline.py
src/analyzer/: preprocessing.py
src/analyzer/features/: base.py
src/analyzer/features/color_detection/: base.py  extractors.py  intra_fusion.py  transforms.py
src/analyzer/features/edge_detection/: base.py  extractors.py  intra_fusion.py  transforms.py
src/analyzer/inter_fusion/: strategies.py
src/analyzer/report/: report_generator.py
src/betteredit/: __init__.py  __main__.py  cli.py
src/betteredit/analyzer/protocols/: color_detector_protocol.py  detection_protocols.py  (+4 more)
src/betteredit/config/: __init__.py  settings.py  settings.yaml
src/config/: design_registry.py
tests/: conftest.py  test_cli.py  test_color_detection.py  test_config_settings.py  test_edge_detection.py  test_entrypoints.py  test_feature_extraction.py  test_pipeline_integration.py  test_preprocessing.py
tests/test_features/: test_base.py  test_color_detection.py  test_edge_detection.py  test_edge_detection_patch.py
